# RevoBank

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  conftest.py  docker-compose.yaml  load_fixture.py  pyproject.toml  requirements.txt
config/: base.py  config_loader.py  dev.py  local.py  remote.py  settings.py  testing.py
instance/: test.db
migrations/versions/: 9646238ac648_make_from_account_id_nullable.py  9a7755f2cfe5_increase_password_field_length.py  b630c7487bcc_initial_migration.py
models/: __init__.py  account.py  transaction.py  transaction_history.py  user.py
models/fixtures/: accounts_dummy.sql  user_fixture.py
repo/: account.py  transaction.py  user.py
route/: account_routes.py  index.py  transaction_routes.py  user_routes.py
tests/: test_app.py  test_query.py
utils/: auth.py  validation.py
